--- a/aps2.ipynb
+++ b/aps2.ipynb
@@ -10,15 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "5a2685ca-0a75-4866-a8e6-e30ae77bdb37",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-14T13:58:54.066561Z",
-     "iopub.status.busy": "2023-09-14T13:58:54.064822Z",
-     "iopub.status.idle": "2023-09-14T13:58:54.071906Z",
-     "shell.execute_reply": "2023-09-14T13:58:54.070772Z",
-     "shell.execute_reply.started": "2023-09-14T13:58:54.066502Z"
+     "iopub.execute_input": "2023-09-15T17:35:59.436567Z",
+     "iopub.status.busy": "2023-09-15T17:35:59.435968Z",
+     "iopub.status.idle": "2023-09-15T17:36:00.412692Z",
+     "shell.execute_reply": "2023-09-15T17:36:00.412269Z",
+     "shell.execute_reply.started": "2023-09-15T17:35:59.436503Z"
     }
    },
    "outputs": [],
@@ -45,21 +45,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "7eb99007-ccd3-4fa6-9729-9f739c695cc1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-14T14:26:52.739473Z",
-     "iopub.status.busy": "2023-09-14T14:26:52.738520Z",
-     "iopub.status.idle": "2023-09-14T14:26:52.745695Z",
-     "shell.execute_reply": "2023-09-14T14:26:52.744567Z",
-     "shell.execute_reply.started": "2023-09-14T14:26:52.739427Z"
+     "iopub.execute_input": "2023-09-15T17:36:00.413539Z",
+     "iopub.status.busy": "2023-09-15T17:36:00.413375Z",
+     "iopub.status.idle": "2023-09-15T17:36:00.416350Z",
+     "shell.execute_reply": "2023-09-15T17:36:00.415758Z",
+     "shell.execute_reply.started": "2023-09-15T17:36:00.413527Z"
     }
    },
    "outputs": [],
    "source": [
-    "FOLDER_PATH = Path.cwd() / 'CondMat.csv'\n",
-    "EDGES_FILE_PATH = FOLDER_PATH / 'edges.csv'"
+    "FOLDER_PATH = Path.cwd() / 'archive'\n",
+    "EDGES_FILE_PATH = FOLDER_PATH / 'web-Google.txt'"
    ]
   },
   {
@@ -77,7 +77,7 @@
    "source": [
     "| Concept of vertices                                                                                                 | Concept of edges                                                                                                                             | Operationalization of vertices                                                                                                                                                                                                                                                           | Operationalization of edges                                                                                                                                                                                                                                                  |\n",
     "|---------------------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|\n",
-    "| Authors                                                                                                             | An edge between i and j indicates co-authorship between i and j.                                                                           | Each vertex represents an author of a paper in the cond-mat category on the arXiv platform. The data was collected from January 1993 to April 2003.                                                                                                                                 | An edge between authors i and j indicates a co-authorship relationship between them. In cases where other k authors also contributed to the production of the paper, these additional k authors are connected to both authors i and j, as well as to each other, through edges. |\n"
+    "| Webpage                                                                                                             | An edge between i and j indicates co-authorship between i and j.                                                                           | Each vertex represents an author of a paper in the cond-mat category on the arXiv platform. The data was collected from January 1993 to April 2003.                                                                                                                                 | An edge between authors i and j indicates a co-authorship relationship between them. In cases where other k authors also contributed to the production of the paper, these additional k authors are connected to both authors i and j, as well as to each other, through edges. |\n"
    ]
   },
   {
@@ -90,15 +90,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "id": "e8548565-eb98-4d8e-b88c-5606b90d0a48",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-14T14:26:54.924982Z",
-     "iopub.status.busy": "2023-09-14T14:26:54.923637Z",
-     "iopub.status.idle": "2023-09-14T14:26:54.931118Z",
-     "shell.execute_reply": "2023-09-14T14:26:54.929908Z",
-     "shell.execute_reply.started": "2023-09-14T14:26:54.924932Z"
+     "iopub.execute_input": "2023-09-15T17:36:00.425037Z",
+     "iopub.status.busy": "2023-09-15T17:36:00.424430Z",
+     "iopub.status.idle": "2023-09-15T17:36:00.429120Z",
+     "shell.execute_reply": "2023-09-15T17:36:00.428614Z",
+     "shell.execute_reply.started": "2023-09-15T17:36:00.425010Z"
     }
    },
    "outputs": [],
@@ -112,15 +112,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "id": "2b7c4621-fd32-40db-8972-6a65bbd64fe6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-14T14:26:57.048711Z",
-     "iopub.status.busy": "2023-09-14T14:26:57.047432Z",
-     "iopub.status.idle": "2023-09-14T14:26:57.055275Z",
-     "shell.execute_reply": "2023-09-14T14:26:57.054022Z",
-     "shell.execute_reply.started": "2023-09-14T14:26:57.048653Z"
+     "iopub.execute_input": "2023-09-15T17:36:00.568219Z",
+     "iopub.status.busy": "2023-09-15T17:36:00.566841Z",
+     "iopub.status.idle": "2023-09-15T17:36:00.574345Z",
+     "shell.execute_reply": "2023-09-15T17:36:00.573748Z",
+     "shell.execute_reply.started": "2023-09-15T17:36:00.568130Z"
     }
    },
    "outputs": [],
@@ -142,33 +142,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "0f1dc392-21ed-4adb-8d27-49ab0526512a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-14T14:26:58.020855Z",
-     "iopub.status.busy": "2023-09-14T14:26:58.020259Z",
-     "iopub.status.idle": "2023-09-14T14:26:58.023034Z",
-     "shell.execute_reply": "2023-09-14T14:26:58.022621Z",
-     "shell.execute_reply.started": "2023-09-14T14:26:58.020836Z"
+     "iopub.execute_input": "2023-09-15T17:36:01.130938Z",
+     "iopub.status.busy": "2023-09-15T17:36:01.129521Z",
+     "iopub.status.idle": "2023-09-15T17:36:01.137731Z",
+     "shell.execute_reply": "2023-09-15T17:36:01.136687Z",
+     "shell.execute_reply.started": "2023-09-15T17:36:01.130893Z"
     }
    },
    "outputs": [],
    "source": [
-    "g = gte.Graph(directed=False)"
+    "g = gte.Graph(directed=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "id": "51386696-159a-4ca9-a8f1-faf5798c597d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-14T14:29:29.879727Z",
-     "iopub.status.busy": "2023-09-14T14:29:29.878922Z",
-     "iopub.status.idle": "2023-09-14T14:29:32.172754Z",
-     "shell.execute_reply": "2023-09-14T14:29:32.172195Z",
-     "shell.execute_reply.started": "2023-09-14T14:29:29.879660Z"
+     "iopub.execute_input": "2023-09-15T17:36:01.505313Z",
+     "iopub.status.busy": "2023-09-15T17:36:01.504759Z",
+     "iopub.status.idle": "2023-09-15T17:37:52.703266Z",
+     "shell.execute_reply": "2023-09-15T17:37:52.702809Z",
+     "shell.execute_reply.started": "2023-09-15T17:36:01.505270Z"
     }
    },
    "outputs": [],
@@ -176,11 +176,15 @@
     "with open(EDGES_FILE_PATH) as file:\n",
     "\n",
     "    next(file)\n",
+    "    next(file)\n",
+    "    next(file)\n",
+    "    next(file)\n",
+    "    \n",
     "    for line in file:\n",
-    "        parts = line.split(',')\n",
+    "        parts = line.split('\\t')\n",
     "\n",
     "        author_a = parts[0]\n",
-    "        author_b = parts[1]\n",
+    "        author_b = parts[1].replace('\\n', '')\n",
     "        \n",
     "        vertex_a = get_or_add_vertex(g, author_a)\n",
     "        vertex_b = get_or_add_vertex(g, author_b)\n",
@@ -189,15 +193,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "id": "017181be-68e4-4e02-9fbe-2e6f42335961",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-14T14:29:38.036535Z",
-     "iopub.status.busy": "2023-09-14T14:29:38.036079Z",
-     "iopub.status.idle": "2023-09-14T14:29:38.197790Z",
-     "shell.execute_reply": "2023-09-14T14:29:38.197137Z",
-     "shell.execute_reply.started": "2023-09-14T14:29:38.036514Z"
+     "iopub.execute_input": "2023-09-15T17:37:52.704148Z",
+     "iopub.status.busy": "2023-09-15T17:37:52.704003Z",
+     "iopub.status.idle": "2023-09-15T17:37:55.961823Z",
+     "shell.execute_reply": "2023-09-15T17:37:55.961313Z",
+     "shell.execute_reply.started": "2023-09-15T17:37:52.704136Z"
     }
    },
    "outputs": [],
@@ -207,20 +211,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "id": "58f23076-b324-4a4d-a73f-c75d6370129f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-14T14:29:54.774624Z",
-     "iopub.status.busy": "2023-09-14T14:29:54.773888Z",
-     "iopub.status.idle": "2023-09-14T14:30:00.994909Z",
-     "shell.execute_reply": "2023-09-14T14:30:00.994472Z",
-     "shell.execute_reply.started": "2023-09-14T14:29:54.774559Z"
+     "iopub.execute_input": "2023-09-15T17:38:15.939501Z",
+     "iopub.status.busy": "2023-09-15T17:38:15.939291Z",
+     "iopub.status.idle": "2023-09-15T17:41:25.127644Z",
+     "shell.execute_reply": "2023-09-15T17:41:25.127203Z",
+     "shell.execute_reply.started": "2023-09-15T17:38:15.939484Z"
     }
    },
    "outputs": [],
    "source": [
-    "gte.save(g, 'cond_mat_authors.net.gz')"
+    "gte.save(g, 'webpage_redirect.net.gz')"
    ]
   },
   {
@@ -233,15 +237,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "id": "6e00504a-1776-4b37-9868-89ca4c5e214b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-14T14:30:02.776694Z",
-     "iopub.status.busy": "2023-09-14T14:30:02.776483Z",
-     "iopub.status.idle": "2023-09-14T14:30:04.081132Z",
-     "shell.execute_reply": "2023-09-14T14:30:04.080553Z",
-     "shell.execute_reply.started": "2023-09-14T14:30:02.776679Z"
+     "iopub.execute_input": "2023-09-15T17:41:28.035419Z",
+     "iopub.status.busy": "2023-09-15T17:41:28.035239Z",
+     "iopub.status.idle": "2023-09-15T17:41:29.132527Z",
+     "shell.execute_reply": "2023-09-15T17:41:29.131993Z",
+     "shell.execute_reply.started": "2023-09-15T17:41:28.035406Z"
     }
    },
    "outputs": [
@@ -266,15 +270,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "6578e088-7675-4f8b-bc6f-b344775fa138",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-14T14:30:04.082339Z",
-     "iopub.status.busy": "2023-09-14T14:30:04.082007Z",
-     "iopub.status.idle": "2023-09-14T14:33:28.985246Z",
-     "shell.execute_reply": "2023-09-14T14:33:28.984691Z",
-     "shell.execute_reply.started": "2023-09-14T14:30:04.082321Z"
+     "iopub.execute_input": "2023-09-15T17:41:29.133611Z",
+     "iopub.status.busy": "2023-09-15T17:41:29.133374Z"
     }
    },
    "outputs": [],
@@ -284,17 +285,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "6b9e2bf3-7bfd-40eb-8690-6880de42d0e2",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-09-14T14:33:28.987375Z",
-     "iopub.status.busy": "2023-09-14T14:33:28.986893Z",
-     "iopub.status.idle": "2023-09-14T14:33:29.935563Z",
-     "shell.execute_reply": "2023-09-14T14:33:29.934895Z",
-     "shell.execute_reply.started": "2023-09-14T14:33:28.987355Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "gte.move(g, layout)"
