--- a/aps2.ipynb
+++ b/aps2.ipynb
@@ -10,15 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "5a2685ca-0a75-4866-a8e6-e30ae77bdb37",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-15T17:35:59.436567Z",
-     "iopub.status.busy": "2023-09-15T17:35:59.435968Z",
-     "iopub.status.idle": "2023-09-15T17:36:00.412692Z",
-     "shell.execute_reply": "2023-09-15T17:36:00.412269Z",
-     "shell.execute_reply.started": "2023-09-15T17:35:59.436503Z"
+     "iopub.execute_input": "2023-09-15T18:51:22.361418Z",
+     "iopub.status.busy": "2023-09-15T18:51:22.359567Z",
+     "iopub.status.idle": "2023-09-15T18:51:22.911041Z",
+     "shell.execute_reply": "2023-09-15T18:51:22.910168Z",
+     "shell.execute_reply.started": "2023-09-15T18:51:22.361357Z"
     }
    },
    "outputs": [],
@@ -45,21 +45,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7eb99007-ccd3-4fa6-9729-9f739c695cc1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-15T17:36:00.413539Z",
-     "iopub.status.busy": "2023-09-15T17:36:00.413375Z",
-     "iopub.status.idle": "2023-09-15T17:36:00.416350Z",
-     "shell.execute_reply": "2023-09-15T17:36:00.415758Z",
-     "shell.execute_reply.started": "2023-09-15T17:36:00.413527Z"
+     "iopub.execute_input": "2023-09-15T18:51:23.192350Z",
+     "iopub.status.busy": "2023-09-15T18:51:23.191813Z",
+     "iopub.status.idle": "2023-09-15T18:51:23.196859Z",
+     "shell.execute_reply": "2023-09-15T18:51:23.196016Z",
+     "shell.execute_reply.started": "2023-09-15T18:51:23.192311Z"
     }
    },
    "outputs": [],
    "source": [
     "FOLDER_PATH = Path.cwd() / 'archive'\n",
-    "EDGES_FILE_PATH = FOLDER_PATH / 'web-Google.txt'"
+    "EDGES_FILE_PATH = FOLDER_PATH / 'musae_git_edges.csv'"
    ]
   },
   {
@@ -90,15 +90,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "e8548565-eb98-4d8e-b88c-5606b90d0a48",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-15T17:36:00.425037Z",
-     "iopub.status.busy": "2023-09-15T17:36:00.424430Z",
-     "iopub.status.idle": "2023-09-15T17:36:00.429120Z",
-     "shell.execute_reply": "2023-09-15T17:36:00.428614Z",
-     "shell.execute_reply.started": "2023-09-15T17:36:00.425010Z"
+     "iopub.execute_input": "2023-09-15T18:51:26.324985Z",
+     "iopub.status.busy": "2023-09-15T18:51:26.324740Z",
+     "iopub.status.idle": "2023-09-15T18:51:26.328314Z",
+     "shell.execute_reply": "2023-09-15T18:51:26.327673Z",
+     "shell.execute_reply.started": "2023-09-15T18:51:26.324965Z"
     }
    },
    "outputs": [],
@@ -112,15 +112,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "2b7c4621-fd32-40db-8972-6a65bbd64fe6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-15T17:36:00.568219Z",
-     "iopub.status.busy": "2023-09-15T17:36:00.566841Z",
-     "iopub.status.idle": "2023-09-15T17:36:00.574345Z",
-     "shell.execute_reply": "2023-09-15T17:36:00.573748Z",
-     "shell.execute_reply.started": "2023-09-15T17:36:00.568130Z"
+     "iopub.execute_input": "2023-09-15T18:51:27.419530Z",
+     "iopub.status.busy": "2023-09-15T18:51:27.419007Z",
+     "iopub.status.idle": "2023-09-15T18:51:27.426325Z",
+     "shell.execute_reply": "2023-09-15T18:51:27.425253Z",
+     "shell.execute_reply.started": "2023-09-15T18:51:27.419490Z"
     }
    },
    "outputs": [],
@@ -142,33 +142,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "0f1dc392-21ed-4adb-8d27-49ab0526512a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-15T17:36:01.130938Z",
-     "iopub.status.busy": "2023-09-15T17:36:01.129521Z",
-     "iopub.status.idle": "2023-09-15T17:36:01.137731Z",
-     "shell.execute_reply": "2023-09-15T17:36:01.136687Z",
-     "shell.execute_reply.started": "2023-09-15T17:36:01.130893Z"
+     "iopub.execute_input": "2023-09-15T18:51:33.705881Z",
+     "iopub.status.busy": "2023-09-15T18:51:33.705379Z",
+     "iopub.status.idle": "2023-09-15T18:51:33.713325Z",
+     "shell.execute_reply": "2023-09-15T18:51:33.712282Z",
+     "shell.execute_reply.started": "2023-09-15T18:51:33.705841Z"
     }
    },
    "outputs": [],
    "source": [
-    "g = gte.Graph(directed=True)"
+    "g = gte.Graph(directed=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "51386696-159a-4ca9-a8f1-faf5798c597d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-15T17:36:01.505313Z",
-     "iopub.status.busy": "2023-09-15T17:36:01.504759Z",
-     "iopub.status.idle": "2023-09-15T17:37:52.703266Z",
-     "shell.execute_reply": "2023-09-15T17:37:52.702809Z",
-     "shell.execute_reply.started": "2023-09-15T17:36:01.505270Z"
+     "iopub.execute_input": "2023-09-15T18:53:06.046621Z",
+     "iopub.status.busy": "2023-09-15T18:53:06.046135Z",
+     "iopub.status.idle": "2023-09-15T18:53:13.111490Z",
+     "shell.execute_reply": "2023-09-15T18:53:13.110709Z",
+     "shell.execute_reply.started": "2023-09-15T18:53:06.046567Z"
     }
    },
    "outputs": [],
@@ -176,12 +176,9 @@
     "with open(EDGES_FILE_PATH) as file:\n",
     "\n",
     "    next(file)\n",
-    "    next(file)\n",
-    "    next(file)\n",
-    "    next(file)\n",
     "    \n",
     "    for line in file:\n",
-    "        parts = line.split('\\t')\n",
+    "        parts = line.split(',')\n",
     "\n",
     "        author_a = parts[0]\n",
     "        author_b = parts[1].replace('\\n', '')\n",
@@ -193,15 +190,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "017181be-68e4-4e02-9fbe-2e6f42335961",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-15T17:37:52.704148Z",
-     "iopub.status.busy": "2023-09-15T17:37:52.704003Z",
-     "iopub.status.idle": "2023-09-15T17:37:55.961823Z",
-     "shell.execute_reply": "2023-09-15T17:37:55.961313Z",
-     "shell.execute_reply.started": "2023-09-15T17:37:52.704136Z"
+     "iopub.execute_input": "2023-09-15T18:53:13.112671Z",
+     "iopub.status.busy": "2023-09-15T18:53:13.112459Z",
+     "iopub.status.idle": "2023-09-15T18:53:13.316852Z",
+     "shell.execute_reply": "2023-09-15T18:53:13.316242Z",
+     "shell.execute_reply.started": "2023-09-15T18:53:13.112654Z"
     }
    },
    "outputs": [],
@@ -211,20 +208,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "58f23076-b324-4a4d-a73f-c75d6370129f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-15T17:38:15.939501Z",
-     "iopub.status.busy": "2023-09-15T17:38:15.939291Z",
-     "iopub.status.idle": "2023-09-15T17:41:25.127644Z",
-     "shell.execute_reply": "2023-09-15T17:41:25.127203Z",
-     "shell.execute_reply.started": "2023-09-15T17:38:15.939484Z"
+     "iopub.execute_input": "2023-09-15T18:53:20.927689Z",
+     "iopub.status.busy": "2023-09-15T18:53:20.927175Z",
+     "iopub.status.idle": "2023-09-15T18:53:31.099338Z",
+     "shell.execute_reply": "2023-09-15T18:53:31.098685Z",
+     "shell.execute_reply.started": "2023-09-15T18:53:20.927648Z"
     }
    },
    "outputs": [],
    "source": [
-    "gte.save(g, 'webpage_redirect.net.gz')"
+    "gte.save(g, 'github_social.net.gz')"
    ]
   },
   {
@@ -237,15 +234,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "6e00504a-1776-4b37-9868-89ca4c5e214b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-15T17:41:28.035419Z",
-     "iopub.status.busy": "2023-09-15T17:41:28.035239Z",
-     "iopub.status.idle": "2023-09-15T17:41:29.132527Z",
-     "shell.execute_reply": "2023-09-15T17:41:29.131993Z",
-     "shell.execute_reply.started": "2023-09-15T17:41:28.035406Z"
+     "iopub.execute_input": "2023-09-15T18:53:31.100617Z",
+     "iopub.status.busy": "2023-09-15T18:53:31.100318Z",
+     "iopub.status.idle": "2023-09-15T18:53:31.774091Z",
+     "shell.execute_reply": "2023-09-15T18:53:31.773244Z",
+     "shell.execute_reply.started": "2023-09-15T18:53:31.100597Z"
     }
    },
    "outputs": [
@@ -270,12 +267,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "6578e088-7675-4f8b-bc6f-b344775fa138",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-15T17:41:29.133611Z",
-     "iopub.status.busy": "2023-09-15T17:41:29.133374Z"
+     "iopub.execute_input": "2023-09-15T18:53:31.775530Z",
+     "iopub.status.busy": "2023-09-15T18:53:31.775034Z",
+     "iopub.status.idle": "2023-09-15T18:56:10.885770Z",
+     "shell.execute_reply": "2023-09-15T18:56:10.885137Z",
+     "shell.execute_reply.started": "2023-09-15T18:53:31.775504Z"
     }
    },
    "outputs": [],
@@ -285,9 +285,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6b9e2bf3-7bfd-40eb-8690-6880de42d0e2",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-09-15T18:56:10.888285Z",
+     "iopub.status.busy": "2023-09-15T18:56:10.888111Z",
+     "iopub.status.idle": "2023-09-15T18:56:11.519494Z",
+     "shell.execute_reply": "2023-09-15T18:56:11.518958Z",
+     "shell.execute_reply.started": "2023-09-15T18:56:10.888272Z"
+    }
+   },
    "outputs": [],
    "source": [
     "gte.move(g, layout)"
@@ -295,33 +303,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "id": "2a03fbf6-d32c-4db9-b6a3-038f06b39839",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-14T14:33:29.936751Z",
-     "iopub.status.busy": "2023-09-14T14:33:29.936517Z",
-     "iopub.status.idle": "2023-09-14T14:33:38.696204Z",
-     "shell.execute_reply": "2023-09-14T14:33:38.695703Z",
-     "shell.execute_reply.started": "2023-09-14T14:33:29.936728Z"
+     "iopub.execute_input": "2023-09-15T18:56:11.520353Z",
+     "iopub.status.busy": "2023-09-15T18:56:11.520181Z",
+     "iopub.status.idle": "2023-09-15T18:56:22.737994Z",
+     "shell.execute_reply": "2023-09-15T18:56:22.737342Z",
+     "shell.execute_reply.started": "2023-09-15T18:56:11.520341Z"
     }
    },
    "outputs": [],
    "source": [
-    "gte.save(g, 'cond_mat_authors_layout.net.gz')"
+    "gte.save(g, 'github_social_layout.net.gz')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "id": "544a69dd-5a60-4c65-90e9-c06087ad0167",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-14T14:33:38.697200Z",
-     "iopub.status.busy": "2023-09-14T14:33:38.697048Z",
-     "iopub.status.idle": "2023-09-14T14:33:38.704945Z",
-     "shell.execute_reply": "2023-09-14T14:33:38.704163Z",
-     "shell.execute_reply.started": "2023-09-14T14:33:38.697187Z"
+     "iopub.execute_input": "2023-09-15T18:56:22.739364Z",
+     "iopub.status.busy": "2023-09-15T18:56:22.738885Z",
+     "iopub.status.idle": "2023-09-15T18:56:22.746940Z",
+     "shell.execute_reply": "2023-09-15T18:56:22.746141Z",
+     "shell.execute_reply.started": "2023-09-15T18:56:22.739340Z"
     }
    },
    "outputs": [
@@ -329,8 +337,8 @@
      "data": {
       "text/html": [
        "\n",
-       "        <div id=\"Vf9nG6tfLjTe4RQPEd3KCT\"></div>\n",
-       "        <script>netpixi.render('Vf9nG6tfLjTe4RQPEd3KCT', '/static/__shared__/redsoc-aps2/cond_mat_authors_layout.net.gz', 1.7777777777777777, true, true, false, true);</script>\n",
+       "        <div id=\"CuvB6RAHhUuwxT7B8hSbmY\"></div>\n",
+       "        <script>netpixi.render('CuvB6RAHhUuwxT7B8hSbmY', '/static/__shared__/redsoc-aps2/github_social_layout.net.gz', 1.7777777777777777, true, true, false, true);</script>\n",
        "    "
       ],
       "text/plain": [
@@ -342,7 +350,7 @@
     }
    ],
    "source": [
-    "r = netpixi.render('cond_mat_authors_layout.net.gz', infinite=True)"
+    "r = netpixi.render('github_social_layout.net.gz', infinite=True)"
    ]
   },
   {
@@ -355,15 +363,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 24,
    "id": "586d6e2e-bac0-4f75-b810-ade3464cbd8b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-14T14:36:49.030732Z",
-     "iopub.status.busy": "2023-09-14T14:36:49.030240Z",
-     "iopub.status.idle": "2023-09-14T14:36:49.034742Z",
-     "shell.execute_reply": "2023-09-14T14:36:49.034223Z",
-     "shell.execute_reply.started": "2023-09-14T14:36:49.030715Z"
+     "iopub.execute_input": "2023-09-15T19:00:02.272212Z",
+     "iopub.status.busy": "2023-09-15T19:00:02.271722Z",
+     "iopub.status.idle": "2023-09-15T19:00:02.279759Z",
+     "shell.execute_reply": "2023-09-15T19:00:02.278739Z",
+     "shell.execute_reply.started": "2023-09-15T19:00:02.272153Z"
     }
    },
    "outputs": [
@@ -371,8 +379,8 @@
      "data": {
       "text/html": [
        "\n",
-       "        <div id=\"VSv7sqmF27borDWDnUTgGP\"></div>\n",
-       "        <script>netpixi.call('VSv7sqmF27borDWDnUTgGP', 'Vf9nG6tfLjTe4RQPEd3KCT', 'changeGraph', 'eyJ0eXBlIjogInNldHRpbmdzIiwgInByb3BzIjogeyJ2ZXJ0ZXgiOiB7InNpemUiOiAxLCAiY29sb3IiOiAxNjcxMTY4MCwgImJ3aWR0aCI6IDEsICJiY29sb3IiOiAzMDQ2NH19fQo=');</script>\n",
+       "        <div id=\"7j6p9kw4mEQtqebsbtAcmP\"></div>\n",
+       "        <script>netpixi.call('7j6p9kw4mEQtqebsbtAcmP', 'CuvB6RAHhUuwxT7B8hSbmY', 'changeGraph', 'eyJ0eXBlIjogInNldHRpbmdzIiwgInByb3BzIjogeyJ2ZXJ0ZXgiOiB7InNpemUiOiAyLCAiY29sb3IiOiAxNjcxMTY4MCwgImJ3aWR0aCI6IDEsICJiY29sb3IiOiAzMDQ2NH19fQo=');</script>\n",
        "    "
       ],
       "text/plain": [
@@ -385,7 +393,7 @@
    ],
    "source": [
     "r.vertex_default(\n",
-    "    size=1,\n",
+    "    size=2,\n",
     "    color=0xff0000,\n",
     "    bwidth=1,\n",
     "    bcolor=0x007700,\n",
@@ -394,15 +402,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "id": "d26f15c6-d02e-4fa4-85a0-1a58033900b6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-14T14:37:12.694523Z",
-     "iopub.status.busy": "2023-09-14T14:37:12.694239Z",
-     "iopub.status.idle": "2023-09-14T14:37:12.698846Z",
-     "shell.execute_reply": "2023-09-14T14:37:12.698245Z",
-     "shell.execute_reply.started": "2023-09-14T14:37:12.694507Z"
+     "iopub.execute_input": "2023-09-15T18:57:44.078426Z",
+     "iopub.status.busy": "2023-09-15T18:57:44.077977Z",
+     "iopub.status.idle": "2023-09-15T18:57:44.086020Z",
+     "shell.execute_reply": "2023-09-15T18:57:44.084936Z",
+     "shell.execute_reply.started": "2023-09-15T18:57:44.078387Z"
     }
    },
    "outputs": [
@@ -410,8 +418,8 @@
      "data": {
       "text/html": [
        "\n",
-       "        <div id=\"YRt2iGN7SeEfw59SZgWPFV\"></div>\n",
-       "        <script>netpixi.call('YRt2iGN7SeEfw59SZgWPFV', 'Vf9nG6tfLjTe4RQPEd3KCT', 'changeGraph', 'eyJ0eXBlIjogInNldHRpbmdzIiwgInByb3BzIjogeyJlZGdlIjogeyJ3aWR0aCI6IDAuMiwgImNvbG9yIjogMTY3NzcyMTUsICJjdXJ2ZTEiOiAwLCAiY3VydmUyIjogMH19fQo=');</script>\n",
+       "        <div id=\"forYNiQdgqUcDwCxefAiW4\"></div>\n",
+       "        <script>netpixi.call('forYNiQdgqUcDwCxefAiW4', 'CuvB6RAHhUuwxT7B8hSbmY', 'changeGraph', 'eyJ0eXBlIjogInNldHRpbmdzIiwgInByb3BzIjogeyJlZGdlIjogeyJ3aWR0aCI6IDAuMiwgImNvbG9yIjogMTY3NzcyMTUsICJjdXJ2ZTEiOiAwLCAiY3VydmUyIjogMH19fQo=');</script>\n",
        "    "
       ],
       "text/plain": [
