--- a/aps2.ipynb
+++ b/aps2.ipynb
@@ -47,7 +47,13 @@
    "id": "c7e50b3d-36ef-431a-8283-2ae1c9f8d131",
    "metadata": {},
    "source": [
-    "In this notebook, a network of co-authorship of papers about condensed matter authors was built. The database in the file below is used. It's from the Stanford Network Analysis Project's dataset at https://networks.skewed.de/net/arxiv_authors#CondMat_draw."
+    "In this notebook, a network of Github developers in which the nodes are develpers and the edges, if they exist, are a follower releationship.\n",
+    "\n",
+    "https://www.kaggle.com/datasets/rozemberczki/musae-github-social-network\n",
+    "\n",
+    "The dataset was created with the aim of supporting the following comparative research about different social networks:\n",
+    "\n",
+    "https://arxiv.org/pdf/1909.13021.pdf"
    ]
   },
   {
@@ -70,6 +76,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f7843099-f675-4c78-8318-5c019937ec5e",
+   "metadata": {},
+   "source": [
+    "## Randomly limiting the Data\n",
+    "\n",
+    "Given that the dataset exceded the maximium size requirement of this project, the data was limited by randomly selecting node's indexes."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "d017aaf0-1419-48ca-9e89-a401d4fc0c26",
@@ -84,9 +100,9 @@
    },
    "outputs": [],
    "source": [
-    "lista3 = range(0, 37701)\n",
     "seed(10)\n",
-    "nodesEscolhidos = choices(lista3, k= int(37700 / 1.2))"
+    "listaNodesIndex = range(0, 37701)\n",
+    "chosenNodes = choices(listaNodesIndex, k= int(37700 / 1.2))"
    ]
   },
   {
@@ -102,9 +118,9 @@
    "id": "85703717-95e7-4b8e-90a0-7fb20bda5902",
    "metadata": {},
    "source": [
-    "| Concept of vertices                                                                                                 | Concept of edges                                                                                                                             | Operationalization of vertices                                                                                                                                                                                                                                                           | Operationalization of edges                                                                                                                                                                                                                                                  |\n",
-    "|---------------------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|\n",
-    "| Webpage                                                                                                             | An edge between i and j indicates co-authorship between i and j.                                                                           | Each vertex represents an author of a paper in the cond-mat category on the arXiv platform. The data was collected from January 1993 to April 2003.                                                                                                                                 | An edge between authors i and j indicates a co-authorship relationship between them. In cases where other k authors also contributed to the production of the paper, these additional k authors are connected to both authors i and j, as well as to each other, through edges. |\n"
+    "| Concept of vertices                  | Concept of edges                                            | Operationalization of vertices                                     | Operationalization of edges                                                | Description                                                                                                                                                                            |\n",
+    "|--------------------------------------|------------------------------------------------------------|---------------------------------------------------------------------|-------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|\n",
+    "| Developers.                          | An edge between i and j means that i and j follow each other. | Each vertex represents a developer that has starred at least 10 repositories. | All edges are undirected and exist only between nodes that mutually follow each other. | The graph was generated with the goal of binary classification. The classification task is to predict what type of developer the Github user is. The two types predicted are web developer or machine learning developer. The target feature (ground truth) of the classification was extracted from the job title of each user and the data was collected from the github public API in June 2019. |"
    ]
   },
   {
@@ -774,6 +790,43 @@
    "outputs": [],
    "source": [
     "distances = g.get_distances()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "065561e8-47ed-4339-890e-3d6fd1eff800",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-09-15T22:27:51.135626Z",
+     "iopub.status.busy": "2023-09-15T22:27:51.134870Z",
+     "iopub.status.idle": "2023-09-15T22:28:06.202499Z",
+     "shell.execute_reply": "2023-09-15T22:28:06.201682Z",
+     "shell.execute_reply.started": "2023-09-15T22:27:51.135604Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    3.862011e+08\n",
+       "mean     3.273040e+00\n",
+       "std      8.015005e-01\n",
+       "min      0.000000e+00\n",
+       "25%      3.000000e+00\n",
+       "50%      3.000000e+00\n",
+       "75%      4.000000e+00\n",
+       "max      1.200000e+01\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "distances.describe()"
    ]
   },
   {
