--- a/aps2.ipynb
+++ b/aps2.ipynb
@@ -10,15 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "5a2685ca-0a75-4866-a8e6-e30ae77bdb37",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-15T22:15:38.335169Z",
-     "iopub.status.busy": "2023-09-15T22:15:38.334929Z",
-     "iopub.status.idle": "2023-09-15T22:15:38.339674Z",
-     "shell.execute_reply": "2023-09-15T22:15:38.338692Z",
-     "shell.execute_reply.started": "2023-09-15T22:15:38.335150Z"
+     "iopub.execute_input": "2023-09-15T22:52:04.007953Z",
+     "iopub.status.busy": "2023-09-15T22:52:04.007373Z",
+     "iopub.status.idle": "2023-09-15T22:52:04.687514Z",
+     "shell.execute_reply": "2023-09-15T22:52:04.686635Z",
+     "shell.execute_reply.started": "2023-09-15T22:52:04.007927Z"
     }
    },
    "outputs": [],
@@ -58,15 +58,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "7eb99007-ccd3-4fa6-9729-9f739c695cc1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-15T22:15:41.305394Z",
-     "iopub.status.busy": "2023-09-15T22:15:41.305069Z",
-     "iopub.status.idle": "2023-09-15T22:15:41.310896Z",
-     "shell.execute_reply": "2023-09-15T22:15:41.309460Z",
-     "shell.execute_reply.started": "2023-09-15T22:15:41.305369Z"
+     "iopub.execute_input": "2023-09-15T22:52:04.689257Z",
+     "iopub.status.busy": "2023-09-15T22:52:04.688843Z",
+     "iopub.status.idle": "2023-09-15T22:52:04.693820Z",
+     "shell.execute_reply": "2023-09-15T22:52:04.692799Z",
+     "shell.execute_reply.started": "2023-09-15T22:52:04.689237Z"
     }
    },
    "outputs": [],
@@ -82,27 +82,28 @@
    "source": [
     "## Randomly limiting the Data\n",
     "\n",
-    "Given that the dataset exceded the maximium size requirement of this project, the data was limited by randomly selecting node's indexes."
+    "Given that the dataset exceded the maximium size requirement of this project, the data was limited by randomly selecting node's indexes. The list is turned to dictionary to reduce the time complexity of the loop inside while parsing the file."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "d017aaf0-1419-48ca-9e89-a401d4fc0c26",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-15T22:15:41.506626Z",
-     "iopub.status.busy": "2023-09-15T22:15:41.505579Z",
-     "iopub.status.idle": "2023-09-15T22:15:41.517766Z",
-     "shell.execute_reply": "2023-09-15T22:15:41.516427Z",
-     "shell.execute_reply.started": "2023-09-15T22:15:41.506600Z"
+     "iopub.execute_input": "2023-09-15T22:54:46.337403Z",
+     "iopub.status.busy": "2023-09-15T22:54:46.337071Z",
+     "iopub.status.idle": "2023-09-15T22:54:46.353633Z",
+     "shell.execute_reply": "2023-09-15T22:54:46.352181Z",
+     "shell.execute_reply.started": "2023-09-15T22:54:46.337379Z"
     }
    },
    "outputs": [],
    "source": [
     "seed(10)\n",
     "listaNodesIndex = range(0, 37701)\n",
-    "chosenNodes = choices(listaNodesIndex, k= int(37700 / 1.2))"
+    "chosenNodes = choices(listaNodesIndex, k=int(37700 / 1.2))\n",
+    "chosenNodesDict = dict.fromkeys(chosenNodes, None)"
    ]
   },
   {
@@ -133,15 +134,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "e8548565-eb98-4d8e-b88c-5606b90d0a48",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-15T22:15:42.625242Z",
-     "iopub.status.busy": "2023-09-15T22:15:42.624928Z",
-     "iopub.status.idle": "2023-09-15T22:15:42.630917Z",
-     "shell.execute_reply": "2023-09-15T22:15:42.629642Z",
-     "shell.execute_reply.started": "2023-09-15T22:15:42.625219Z"
+     "iopub.execute_input": "2023-09-15T22:54:48.867974Z",
+     "iopub.status.busy": "2023-09-15T22:54:48.867582Z",
+     "iopub.status.idle": "2023-09-15T22:54:48.874311Z",
+     "shell.execute_reply": "2023-09-15T22:54:48.873165Z",
+     "shell.execute_reply.started": "2023-09-15T22:54:48.867951Z"
     }
    },
    "outputs": [],
@@ -155,15 +156,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "2b7c4621-fd32-40db-8972-6a65bbd64fe6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-15T22:15:42.911025Z",
-     "iopub.status.busy": "2023-09-15T22:15:42.910422Z",
-     "iopub.status.idle": "2023-09-15T22:15:42.915797Z",
-     "shell.execute_reply": "2023-09-15T22:15:42.914797Z",
-     "shell.execute_reply.started": "2023-09-15T22:15:42.910998Z"
+     "iopub.execute_input": "2023-09-15T22:54:49.165678Z",
+     "iopub.status.busy": "2023-09-15T22:54:49.165019Z",
+     "iopub.status.idle": "2023-09-15T22:54:49.171188Z",
+     "shell.execute_reply": "2023-09-15T22:54:49.169706Z",
+     "shell.execute_reply.started": "2023-09-15T22:54:49.165652Z"
     }
    },
    "outputs": [],
@@ -185,15 +186,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "0f1dc392-21ed-4adb-8d27-49ab0526512a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-15T22:15:43.388917Z",
-     "iopub.status.busy": "2023-09-15T22:15:43.388494Z",
-     "iopub.status.idle": "2023-09-15T22:15:43.393836Z",
-     "shell.execute_reply": "2023-09-15T22:15:43.392856Z",
-     "shell.execute_reply.started": "2023-09-15T22:15:43.388897Z"
+     "iopub.execute_input": "2023-09-15T22:54:49.798266Z",
+     "iopub.status.busy": "2023-09-15T22:54:49.797951Z",
+     "iopub.status.idle": "2023-09-15T22:54:49.804298Z",
+     "shell.execute_reply": "2023-09-15T22:54:49.802956Z",
+     "shell.execute_reply.started": "2023-09-15T22:54:49.798244Z"
     }
    },
    "outputs": [],
@@ -203,15 +204,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "51386696-159a-4ca9-a8f1-faf5798c597d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-15T22:15:43.632021Z",
-     "iopub.status.busy": "2023-09-15T22:15:43.631588Z",
-     "iopub.status.idle": "2023-09-15T22:17:31.037771Z",
-     "shell.execute_reply": "2023-09-15T22:17:31.036704Z",
-     "shell.execute_reply.started": "2023-09-15T22:15:43.631999Z"
+     "iopub.execute_input": "2023-09-15T22:59:06.058199Z",
+     "iopub.status.busy": "2023-09-15T22:59:06.057580Z",
+     "iopub.status.idle": "2023-09-15T22:59:09.005702Z",
+     "shell.execute_reply": "2023-09-15T22:59:09.004885Z",
+     "shell.execute_reply.started": "2023-09-15T22:59:06.058172Z"
     }
    },
    "outputs": [],
@@ -225,7 +226,8 @@
     "\n",
     "        author_a = int(parts[0])\n",
     "        author_b = int(parts[1].replace('\\n', ''))\n",
-    "        if (author_a in nodesEscolhidos and author_b in nodesEscolhidos):\n",
+    "        # if (author_a in chosenNodes and author_b in chosenNodes):\n",
+    "        if (author_a in chosenNodesDict and author_b in chosenNodesDict):\n",
     "            vertex_a = get_or_add_vertex(g, author_a)\n",
     "            vertex_b = get_or_add_vertex(g, author_b)\n",
     "            edge = get_or_add_edge(g, author_a, author_b)"
@@ -233,15 +235,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "017181be-68e4-4e02-9fbe-2e6f42335961",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-15T22:17:31.039631Z",
-     "iopub.status.busy": "2023-09-15T22:17:31.039159Z",
-     "iopub.status.idle": "2023-09-15T22:17:31.127460Z",
-     "shell.execute_reply": "2023-09-15T22:17:31.126602Z",
-     "shell.execute_reply.started": "2023-09-15T22:17:31.039616Z"
+     "iopub.execute_input": "2023-09-15T22:57:03.181714Z",
+     "iopub.status.busy": "2023-09-15T22:57:03.181167Z",
+     "iopub.status.idle": "2023-09-15T22:57:03.280790Z",
+     "shell.execute_reply": "2023-09-15T22:57:03.279491Z",
+     "shell.execute_reply.started": "2023-09-15T22:57:03.181693Z"
     }
    },
    "outputs": [],
@@ -251,15 +253,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "58f23076-b324-4a4d-a73f-c75d6370129f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-15T22:17:31.128783Z",
-     "iopub.status.busy": "2023-09-15T22:17:31.128400Z",
-     "iopub.status.idle": "2023-09-15T22:17:35.964030Z",
-     "shell.execute_reply": "2023-09-15T22:17:35.963173Z",
-     "shell.execute_reply.started": "2023-09-15T22:17:31.128763Z"
+     "iopub.execute_input": "2023-09-15T22:57:03.733511Z",
+     "iopub.status.busy": "2023-09-15T22:57:03.733078Z",
+     "iopub.status.idle": "2023-09-15T22:57:08.413004Z",
+     "shell.execute_reply": "2023-09-15T22:57:08.411965Z",
+     "shell.execute_reply.started": "2023-09-15T22:57:03.733486Z"
     }
    },
    "outputs": [],
@@ -277,15 +279,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "6e00504a-1776-4b37-9868-89ca4c5e214b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-15T22:17:35.966152Z",
-     "iopub.status.busy": "2023-09-15T22:17:35.965992Z",
-     "iopub.status.idle": "2023-09-15T22:17:37.408001Z",
-     "shell.execute_reply": "2023-09-15T22:17:37.407167Z",
-     "shell.execute_reply.started": "2023-09-15T22:17:35.966138Z"
+     "iopub.execute_input": "2023-09-15T22:57:10.407540Z",
+     "iopub.status.busy": "2023-09-15T22:57:10.407264Z",
+     "iopub.status.idle": "2023-09-15T22:57:11.454393Z",
+     "shell.execute_reply": "2023-09-15T22:57:11.453398Z",
+     "shell.execute_reply.started": "2023-09-15T22:57:10.407521Z"
     }
    },
    "outputs": [
@@ -310,15 +312,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "6578e088-7675-4f8b-bc6f-b344775fa138",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-15T22:17:37.410139Z",
-     "iopub.status.busy": "2023-09-15T22:17:37.409010Z",
-     "iopub.status.idle": "2023-09-15T22:18:49.082989Z",
-     "shell.execute_reply": "2023-09-15T22:18:49.082296Z",
-     "shell.execute_reply.started": "2023-09-15T22:17:37.410117Z"
+     "iopub.execute_input": "2023-09-15T22:57:11.456535Z",
+     "iopub.status.busy": "2023-09-15T22:57:11.455747Z",
+     "iopub.status.idle": "2023-09-15T22:58:09.571115Z",
+     "shell.execute_reply": "2023-09-15T22:58:09.570415Z",
+     "shell.execute_reply.started": "2023-09-15T22:57:11.456515Z"
     }
    },
    "outputs": [],
@@ -328,15 +330,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "6b9e2bf3-7bfd-40eb-8690-6880de42d0e2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-15T22:18:49.084393Z",
-     "iopub.status.busy": "2023-09-15T22:18:49.084042Z",
-     "iopub.status.idle": "2023-09-15T22:18:49.500261Z",
-     "shell.execute_reply": "2023-09-15T22:18:49.499117Z",
-     "shell.execute_reply.started": "2023-09-15T22:18:49.084374Z"
+     "iopub.execute_input": "2023-09-15T22:58:09.572478Z",
+     "iopub.status.busy": "2023-09-15T22:58:09.572132Z",
+     "iopub.status.idle": "2023-09-15T22:58:09.990521Z",
+     "shell.execute_reply": "2023-09-15T22:58:09.989587Z",
+     "shell.execute_reply.started": "2023-09-15T22:58:09.572460Z"
     }
    },
    "outputs": [],
@@ -346,15 +348,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "2a03fbf6-d32c-4db9-b6a3-038f06b39839",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-15T22:18:49.501514Z",
-     "iopub.status.busy": "2023-09-15T22:18:49.501225Z",
-     "iopub.status.idle": "2023-09-15T22:18:55.168637Z",
-     "shell.execute_reply": "2023-09-15T22:18:55.167700Z",
-     "shell.execute_reply.started": "2023-09-15T22:18:49.501493Z"
+     "iopub.execute_input": "2023-09-15T22:58:09.992766Z",
+     "iopub.status.busy": "2023-09-15T22:58:09.991958Z",
+     "iopub.status.idle": "2023-09-15T22:58:15.579708Z",
+     "shell.execute_reply": "2023-09-15T22:58:15.579053Z",
+     "shell.execute_reply.started": "2023-09-15T22:58:09.992742Z"
     }
    },
    "outputs": [],
@@ -364,15 +366,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "544a69dd-5a60-4c65-90e9-c06087ad0167",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-15T22:19:01.011976Z",
-     "iopub.status.busy": "2023-09-15T22:19:01.010971Z",
-     "iopub.status.idle": "2023-09-15T22:19:01.019423Z",
-     "shell.execute_reply": "2023-09-15T22:19:01.018355Z",
-     "shell.execute_reply.started": "2023-09-15T22:19:01.011949Z"
+     "iopub.execute_input": "2023-09-15T22:58:15.582681Z",
+     "iopub.status.busy": "2023-09-15T22:58:15.582107Z",
+     "iopub.status.idle": "2023-09-15T22:58:15.598125Z",
+     "shell.execute_reply": "2023-09-15T22:58:15.596500Z",
+     "shell.execute_reply.started": "2023-09-15T22:58:15.582666Z"
     }
    },
    "outputs": [
@@ -380,8 +382,8 @@
      "data": {
       "text/html": [
        "\n",
-       "        <div id=\"iAdHSebs8QCwikrTCoCc3h\"></div>\n",
-       "        <script>netpixi.render('iAdHSebs8QCwikrTCoCc3h', '/static/__shared__/shared-github/redsoc-aps2/github_social_layout.net.gz', 1.7777777777777777, true, true, false, true);</script>\n",
+       "        <div id=\"Ye8FjkLj7QgyUVCnDZFBu7\"></div>\n",
+       "        <script>netpixi.render('Ye8FjkLj7QgyUVCnDZFBu7', '/static/__shared__/shared-github/redsoc-aps2/github_social_layout.net.gz', 1.7777777777777777, true, true, false, true);</script>\n",
        "    "
       ],
       "text/plain": [
@@ -406,25 +408,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "11077aad-3b78-4a49-94c0-e97de5ac48dc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-15T22:19:07.512527Z",
-     "iopub.status.busy": "2023-09-15T22:19:07.511511Z",
-     "iopub.status.idle": "2023-09-15T22:19:07.518881Z",
-     "shell.execute_reply": "2023-09-15T22:19:07.517731Z",
-     "shell.execute_reply.started": "2023-09-15T22:19:07.512505Z"
+     "iopub.execute_input": "2023-09-15T22:58:15.600066Z",
+     "iopub.status.busy": "2023-09-15T22:58:15.599575Z",
+     "iopub.status.idle": "2023-09-15T22:58:15.606894Z",
+     "shell.execute_reply": "2023-09-15T22:58:15.606069Z",
+     "shell.execute_reply.started": "2023-09-15T22:58:15.600044Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Graph object, undirected, with 19652 vertices and 100556 edges, 4 internal vertex properties, at 0x7f0b8c384950>"
+       "<Graph object, undirected, with 19653 vertices and 100557 edges, 4 internal vertex properties, at 0x7fe9f32f0f10>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
