--- a/aps2.ipynb
+++ b/aps2.ipynb
@@ -518,7 +518,7 @@
    "id": "4603ae38-dadb-4284-be5a-6edc72310fce",
    "metadata": {},
    "source": [
-    "## Analyzing the network"
+    "## Calculating Density and Transitivity"
    ]
   },
   {
