Improving "Understanging the data" section

--- a/aps2.ipynb
+++ b/aps2.ipynb
@@ -47,7 +47,7 @@
    "id": "c7e50b3d-36ef-431a-8283-2ae1c9f8d131",
    "metadata": {},
    "source": [
-    "In this notebook, a network of Github developers in which the nodes are develpers and the edges, if they exist, are a follower releationship.\n",
+    "In this notebook, a network of Github developers in which the nodes are develpers and the edges, if they exist, are mutual follower releationships.\n",
     "\n",
     "https://www.kaggle.com/datasets/rozemberczki/musae-github-social-network\n",
     "\n",
@@ -119,9 +119,9 @@
    "id": "85703717-95e7-4b8e-90a0-7fb20bda5902",
    "metadata": {},
    "source": [
-    "| Concept of vertices                  | Concept of edges                                            | Operationalization of vertices                                     | Operationalization of edges                                                | Description                                                                                                                                                                            |\n",
-    "|--------------------------------------|------------------------------------------------------------|---------------------------------------------------------------------|-------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|\n",
-    "| Developers.                          | An edge between i and j means that i and j follow each other on GitHub. | Each vertex represents a developer that has starred at least 10 repositories. | All edges are undirected and exist only between nodes that mutually follow each other. | The graph was generated with the goal of binary classification. The classification task is to predict what type of developer the Github user is. The two types predicted are web developer or machine learning developer. The target feature (ground truth) of the classification was extracted from the job title of each user and the data was collected from the github public API in June 2019. |"
+    "An extensive social network of GitHub developers was collected from the public API in June 2019. Nodes are developers who have starred at most minuscule 10 repositories, and edges are mutual follower relationships between them. The vertex features are extracted based on the location; repositories starred, employer and e-mail address. The task related to the graph is binary node classification - one has to predict whether the GitHub user is a web or a machine learning developer. This targeting feature was derived from the job title of each user.\n",
+    "\n",
+    "(Text extracted from https://www.kaggle.com/datasets/gitanjali1425/github-social-network-graph-dataset)"
    ]
   },
   {
@@ -904,14 +904,6 @@
    "source": [
     "log(g.num_vertices())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d1e2265c-9d78-4301-afb1-dc0fe24b2aca",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
