--- a/aps2.ipynb
+++ b/aps2.ipynb
@@ -196,6 +196,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c7ae98f2-bc19-46cd-8a24-9dd2e1b5a651",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Number of vertices:\", g.num_vertices())\n",
+    "print(\"Number of edges:\", g.num_edges())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "58f23076-b324-4a4d-a73f-c75d6370129f",
    "metadata": {},
    "outputs": [],
@@ -278,7 +289,7 @@
    "outputs": [],
    "source": [
     "r.vertex_default(\n",
-    "    size=1,\n",
+    "    size=2,\n",
     "    color=0xff7700,\n",
     "    bwidth=0.2,\n",
     "    bcolor=0x0000ff,\n",
@@ -431,7 +442,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "distances.hist();"
+    "distances.hist()"
    ]
   },
   {
@@ -461,7 +472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
